// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFeedbak component Should add hover styles when the mouse enter to the content editor 1`] = `
<div
  className="TextFeedback-container-2211185196"
>
  <p
    className="TextFeedback-text-3056024988"
    contentEditable={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPaste={[Function]}
    suppressContentEditableWarning={true}
  >
    <span>
      <span
        className={undefined}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "#999600",
          }
        }
      >
        The
      </span>
    </span>
    <span>
      <span
        className={undefined}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "#008000",
          }
        }
      >
         cat is
      </span>
    </span>
    <span>
      <span
        className="TextFeedback-readed-604330111"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={Object {}}
      >
         under the
      </span>
    </span>
    <span>
      <span
        className="TextFeedback-unreaded-1813682287"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={Object {}}
      >
         table.
      </span>
    </span>
  </p>
  <div
    className="TextFeedback-editContainer-2585465578"
  >
    <span
      className="TextFeedback-editIconContainer-3256160467"
    >
      <i
        className="material-icons TextFeedback-editIcon-2721462721"
      >
        mode_edit
      </i>
       
      Edit
    </span>
  </div>
</div>
`;

exports[`TextFeedbak component Should add hover styles when the mouse enter to the content editor 2`] = `
<div
  className="TextFeedback-container-2211185196"
>
  <p
    className="TextFeedback-text-3056024988"
    contentEditable={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPaste={[Function]}
    suppressContentEditableWarning={true}
  >
    <span>
      <span
        className={undefined}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "#999600",
          }
        }
      >
        The
      </span>
    </span>
    <span>
      <span
        className={undefined}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "#008000",
          }
        }
      >
         cat is
      </span>
    </span>
    <span>
      <span
        className="TextFeedback-readed-604330111"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={Object {}}
      >
         under the
      </span>
    </span>
    <span>
      <span
        className="TextFeedback-unreaded-1813682287"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={Object {}}
      >
         table.
      </span>
    </span>
  </p>
  <div
    className="TextFeedback-editContainer-2585465578"
  />
</div>
`;

exports[`TextFeedbak component Should display unsupported message 1`] = `
<div
  className="TextFeedback-container-2211185196"
>
  <p
    className="TextFeedback-text-3056024988"
    contentEditable={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPaste={[Function]}
    suppressContentEditableWarning={true}
  >
    <span>
      <span
        className={undefined}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "#999600",
          }
        }
      >
        The
      </span>
    </span>
    <span>
      <span
        className={undefined}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "#008000",
          }
        }
      >
         cat is
      </span>
    </span>
    <span>
      <span
        className="TextFeedback-readed-604330111"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={Object {}}
      >
         under the
      </span>
    </span>
    <span>
      <span
        className="TextFeedback-unreaded-1813682287"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={Object {}}
      >
         table.
      </span>
    </span>
  </p>
  <div
    className="TextFeedback-editContainer-2585465578"
  />
</div>
`;
